重构用户界面

--- a/src/renderer/assets/style/index.less
+++ b/src/renderer/assets/style/index.less
@@ -3,3 +3,23 @@
 
 @navbar-backcolor: var(--navbar-backcolor);
 @navbar-textcolor: var(--navbar-textcolor);
+
+@main-backcolor: var(--main-backcolor);
+@header-backcolor: var(--header-backcolor);
+
+@tabbar-backcolor: var(--tabbar-backcolor);
+@tabbar-header-border-color: var(--tabbar-header-border-color);
+@tabbar-header-textcolor: var(--tabbar-header-textcolor);
+@tabbar-item-hover-backcolor: var(--tabbar-item-hover-backcolor);
+@tabbar-item-enable-backcolor: var(--tabbar-item-enable-backcolor);
+@tabbar-item-enable-textcolor: var(--tabbar-item-enable-textcolor);
+@tabbar-item-disable-textcolor: var(--tabbar-item-disable-textcolor);
+@tabbar-item-copyright-textcolor: var(--tabbar-item-copyright-textcolor);
+
+@todo-header-textcolor: var(--todo-header-textcolor);
+@todo-header-border-color: var(--todo-header-border-color);
+@todo-header-button-backcolor: var(--todo-header-button-backcolor);
+@todo-list-item-backcolor: var(--todo-list-item-backcolor);
+@todo-list-item-textcolor: var(--todo-list-item-textcolor);
+@todo-list-item-img-container-backcolor: var(--todo-list-item-img-container-backcolor);
+@todo-list-item-datetime-textcolor: var(--todo-list-item-datetime-textcolor);
