--- a/src/renderer/assets/style/index.less
+++ b/src/renderer/assets/style/index.less
@@ -23,3 +23,11 @@
 @todo-list-item-textcolor: var(--todo-list-item-textcolor);
 @todo-list-item-img-container-backcolor: var(--todo-list-item-img-container-backcolor);
 @todo-list-item-datetime-textcolor: var(--todo-list-item-datetime-textcolor);
+
+@setting-textcolor: var(--setting-textcolor);
+@setting-item-backcolor: var(--setting-item-backcolor);
+
+@checkbox-backcolor: var(--checkbox-backcolor);
+@togglebox-textcolor: var(--togglebox-textcolor);
+@togglebox-disable-backcolor: var(--togglebox-disable-backcolor);
+@togglebox-enable-backcolor: var(--togglebox-enable-backcolor);
