实现主题切换时的icon颜色切换

--- a/src/renderer/assets/style/dark_color.css
+++ b/src/renderer/assets/style/dark_color.css
@@ -8,7 +8,7 @@
     --tabbar-backcolor: rgb(66,66,78);
     --tabbar-header-border-color: rgb(85,79,79);
     --tabbar-header-textcolor: white;
-    --tabbar-item-hover-backcolor: #494949;
+    --tabbar-item-hover-backcolor: rgb(60, 60, 75);
     --tabbar-item-enable-backcolor: rgb(44,42,56);
     --tabbar-item-enable-textcolor: white;
     --tabbar-item-disable-textcolor: #8a8989;
